--- a/.eslintrc
+++ b/.eslintrc
@@ -21,7 +21,20 @@
     "prettier"
   ],
   "rules": {
+    /* Import Rules */
+    "import/no-extraneous-dependencies": "off",
+    "import/prefer-default-export": "off",
+
+    /* Typescript Rules */
     "@typescript-eslint/no-unused-vars": ["warn"],
-    "import/no-extraneous-dependencies": ["error", { "devDependencies": true }]
+
+    /* React Rules */
+    "react/function-component-definition": [
+      2,
+      {
+        "namedComponents": "arrow-function",
+        "unnamedComponents": "arrow-function"
+      }
+    ]
   }
 }
