build: add tsup

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "prettier": "^2.8.7",
     "readline-sync": "^1.4.10",
     "ts-jest": "^29.1.0",
+    "tsup": "^6.7.0",
     "turbo": "^1.8.8",
     "typescript": "^5.0.4"
   }
