--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "lint": "eslint packages/**/**/src --ext .ts,.tsx --config .eslintrc --cache",
     "test": "jest",
     "cli:test": "ts-node ./scripts/pkg/packageManager.ts test",
-    "cli:create": "ts-node ./scripts/pkg/packageManager.ts create"
+    "cli:create": "ts-node ./scripts/pkg/packageManager.ts create",
+    "clean": "pnpm -r --parallel exec rimraf dist .turbo",
+    "build": "turbo run build"
   },
   "devDependencies": {
     "@babel/core": "^7.21.4",
@@ -45,6 +47,7 @@
     "jest": "^29.5.0",
     "prettier": "^2.8.7",
     "readline-sync": "^1.4.10",
+    "rimraf": "^5.0.0",
     "ts-jest": "^29.1.0",
     "tsup": "^6.7.0",
     "turbo": "^1.8.8",
