--- a/turbo.json
+++ b/turbo.json
@@ -1,5 +1,10 @@
 {
   "$schema": "https://turborepo.org/schema.json",
-  "pipeline": {},
+  "pipeline": {
+    "build": {
+      "outputs": ["dist/**"],
+      "dependsOn": ["^build"]
+    }
+  },
   "globalDependencies": ["tsconfig.json"]
 }
