build: add clean-package

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "babel-jest": "^29.5.0",
+    "clean-package": "^2.2.0",
     "commander": "^10.0.0",
     "eslint": "^8.38.0",
     "eslint-config-airbnb": "^19.0.4",
